14625
The following code works in previous revisions: 
{code}
Welcome to Scala version 2.8.0.r19258-b20091024123249 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_15).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val l = Array(3, 4) 
l: Array[Int] = Array(3, 4)

scala> l sortWith {(x1, x2) => x1 > x2}
res0: Array[Int] = Array(4, 3)

scala> l sortWith {(x1: Int, x2: Int) => x1 > x2}
res1: Array[Int] = Array(4, 3)

scala> l sortWith {case (x1: Int, x2: Int) => x1 > x2}
<console>:6: error: missing parameter type for expanded function ((x0$$1) => x0$$1 match {
  case scala.Tuple2((x1 @ (_: Int)), (x2 @ (_: Int))) => x1.$$greater(x2)
})
       l sortWith {case (x1: Int, x2: Int) => x1 > x2}
                  ^

scala> l sortWith {case (x1, x2) => x1 > x2}          
<console>:6: error: missing parameter type for expanded function ((x0$$1) => x0$$1 match {
  case scala.Tuple2((x1 @ _), (x2 @ _)) => x1.$$greater(x2)
})
       l sortWith {case (x1, x2) => x1 > x2}
                  ^
{code}
